tests/errors/segment-mismatch.spcasmtest
org 0
db 0, 1, 2, 3, 4, 5, 6, 7, 8, 9
org 5
db $ff
